# whisper-flow

./: README.md  install.command  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
scripts/: install.ps1  install.sh  release.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: api_client.rs  audio.rs  lib.rs
src/components/: Dictionary.tsx  GeneralSettings.tsx  MainContent.tsx  Sidebar.tsx  Snippets.tsx  Style.tsx
