[package]
name = "verba"
version = "0.2.0"
description = "Verba - AI Dictation Assistant"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "verba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
cpal = "0.15"
hound = "3.5"
enigo = "0.3"
global-hotkey = "0.5" # Using a known stable version for global hotkeys
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
base64 = "0.22"
dirs = "5"

